WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199463
Fix a couple of thread safety issues in ResourceLoadStatisticsStore
https://bugs.webkit.org/show_bug.cgi?id=199463
Summary
Fix a couple of thread safety issues in ResourceLoadStatisticsStore
Chris Dumez
Reported
2019-07-03 14:27:08 PDT
Fix a couple of thread safety issues in ResourceLoadStatisticsStore.
Attachments
Patch
(4.22 KB, patch)
2019-07-03 14:32 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-07-03 14:32:27 PDT
Created
attachment 373415
[details]
Patch
Chris Dumez
Comment 2
2019-07-03 14:39:15 PDT
Comment on
attachment 373415
[details]
Patch Oh, there is more...
Chris Dumez
Comment 3
2019-07-03 14:41:40 PDT
Comment on
attachment 373415
[details]
Patch I'll keep this patch simple.
WebKit Commit Bot
Comment 4
2019-07-03 15:16:13 PDT
Comment on
attachment 373415
[details]
Patch Clearing flags on attachment: 373415 Committed
r247112
: <
https://trac.webkit.org/changeset/247112
>
WebKit Commit Bot
Comment 5
2019-07-03 15:16:15 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2019-07-03 15:17:18 PDT
<
rdar://problem/52614372
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug